--- a/source/frontend/src/cross-topics/form-cross-topic/form-cross-topic.html
+++ b/source/frontend/src/cross-topics/form-cross-topic/form-cross-topic.html
@@ -1,14 +1,13 @@
+<div class="contentNewProyect">{{formCtrl.title}}</div>
 <div class="contentFormProyect admin">
-  <div class="col-md-9 col-sm-12 col-xs-12">
+  <div class="col-md-12 col-sm-12 col-xs-12">
     <form role="form" ng-submit="formCtrl.submit()">
-      <div class="row">
-        <div class="form-group col-md-12">
-          <label for="name">Nuevo tema transversal</label>
-          <input type="text" class="form-control" id="name" placeholder="Ingresar nombre" ng-model="formCtrl.currentCrossTopic.temaTransversal" required>
+        <div class="form-group col-md-12 agrupador form-group">
+          <label for="name">Nombre</label>
+          <input type="text" class="form-control form-group" id="name" maxlength="512" placeholder="Ingresar nombre" ng-model="formCtrl.currentCrossTopic.temaTransversal" required>
         </div>
-      </div>
-      <button type="submit" class="btn btn-success"><i class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></i> Guardar</button>
-      <button type="button" class="btn btn-link" ng-click="formCtrl.cancel()">Cancelar</button>
+      <button type="submit" class="btn btn-success">Guardar</button>
+      <button type="button" class="btn btn-default right" ng-click="formCtrl.cancel()">Cancelar cambios</button>
     </form>
   </div>
 </div>
