--- a/source/frontend/src/excel/excel.html
+++ b/source/frontend/src/excel/excel.html
@@ -7,6 +7,6 @@
         <!-- <li><a href="#">Descargar Excel con todos los proyectos</a></li> -->
         <li><a ng-click="excelCtrl.downloadExcel()">Descargar Excel maestro</a></li>
         <li role="separator" class="divider" ng-show="excelCtrl.showimport"></li>
-        <li><a ui-sref="home.upload" ng-show="excelCtrl.showimport">Importar proyectos de Excel</a></li>
+        <li><a ui-sref="upload" ng-show="excelCtrl.showimport">Importar proyectos de Excel</a></li>
     </ul>
 </div>
