--- a/source/frontend/src/alert/alertmodal.html
+++ b/source/frontend/src/alert/alertmodal.html
@@ -1,20 +1,20 @@
-<div class="modal fade" id="alertModalId" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="{{modalId}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
        <div class="modal-dialog" role="document">
            <div class="modal-content">
 
                <div class="modal-header">
                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                   <h4 class="modal-title" id="myModalLabel">{{alertCtrl.title}}</h4>
+                   <h4 class="modal-title" id="myModalLabel">{{modalTitle}}</h4>
                </div>
 
                <div class="modal-body">
-                   <p>{{alertCtrl.text}}</p>
+                   <p>{{modalBody}}</p>
                    <p class="debug-url"></p>
                </div>
 
                <div class="modal-footer">
                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                   <button type="button" class="btn btn-ok" ng-click="alertCtrl.acept()">Aceptar</button>
+                   <button type="button" class="btn btn-ok" ng-click="alertCtrl.accept()">Aceptar</button>
                </div>
            </div>
        </div>
