--- a/source/frontend/src/home/form-strategic-objective.html
+++ b/source/frontend/src/home/form-strategic-objective.html
@@ -5,23 +5,23 @@
         <form role="form" ng-submit="formCtrl.saveStrategicObjective()">
             <div class="form-group col-md-12 agrupador">
                 <label for="name">Nombre de Objetivo Estrat&eacute;gico</label>
-                <input type="text" class="form-control form-group" id="name" placeholder="Ingresar nombre" ng-model="formCtrl.currentStrategicObjective.nombre" required>
+                <input type="text" class="form-control form-group" id="name" maxlength="512"placeholder="Ingresar nombre" ng-model="formCtrl.currentStrategicObjective.nombre" required>
                <div class="row" ng-show="formCtrl.currentStrategicObjective.indicadoresEstrategicos.length > 0">
                     <div class="col-md-5 col-sm-3 col-xs-11">
-                        <label for="responsable">Nombre del Indicador <span class="glyphicon glyphicon-question-sign"  data-placement="top" data-toggle="popover" data-content="Debe relacionarse con el objetivo estratégico y debe contener en su formulación la unidad de análisis, forma de medición y alcance. Ej. Porcentaje de Hogares en situación de hacinamiento dentro del Barrio 31 y 31bis. " title="Nombre del Indicador"></span></label>
+                        <label for="responsable">Nombre del Indicador <popover data-placement="top" data-content="Debe relacionarse con el objetivo estratégico y debe contener en su formulación la unidad de análisis, forma de medición y alcance. Ej. Porcentaje de Hogares en situación de hacinamiento dentro del Barrio 31 y 31bis. " title="Nombre del Indicador"></popover></label>
                     </div>
                     <div class="col-md-6 col-sm-5 col-xs-11">
-                        <label for="responsable">Método de cálculo <span class="glyphicon glyphicon-question-sign"  data-placement="top" data-toggle="popover" data-content="Debe detallar cómo está calculado el indicador. Debe ser una expresión matemática definida de manera adecuada y de fácil comprensión, donde queden claras las variables utilizadas. Ej. (Sumatoria de Hogares en situación de hacinamiento dentro del Barrio 31 y 31bis/ Sumatoria del total de Hogares dentro del Barrio 31 y 31bis) *100" title="Método de cálculo"></span></label>
+                        <label for="responsable">Método de cálculo <popover data-placement="top" data-content="Debe detallar cómo está calculado el indicador. Debe ser una expresión matemática definida de manera adecuada y de fácil comprensión, donde queden claras las variables utilizadas. Ej. (Sumatoria de Hogares en situación de hacinamiento dentro del Barrio 31 y 31bis/ Sumatoria del total de Hogares dentro del Barrio 31 y 31bis) *100" title="Método de cálculo"></popover></label>
                     </div>
                 </div>
                 <div class="row" ng-repeat="indicador in formCtrl.currentStrategicObjective.indicadoresEstrategicos track by $index">
                     <div class="form-group col-md-5 col-sm-3 col-xs-11 add-line">
-                        <input type="text" class="form-control" ng-model="indicador.nombre" placeholder="Ingresar nombre del ndicador">
+                        <input type="text" class="form-control" ng-model="indicador.nombre" maxlength="512" placeholder="Ingresar nombre del indicador">
                     </div>
                     <div class="form-group col-md-6 col-sm-5 col-xs-11 add-line">
-                        <input type="text" class="form-control" ng-model="indicador.descripcion" placeholder="Ingresar forma de medici&oacute;n">
+                        <input type="text" class="form-control" ng-model="indicador.descripcion" maxlength="512" placeholder="Ingresar forma de medici&oacute;n">
                     </div>
-                    <i class="glyphicon glyphicon-remove line" aria-hidden="true"  data-toggle="tooltip" data-placement="top" title="" data-original-title="Eliminar" ng-click="formCtrl.removeIndicador($index)"></i>
+                    <i class="glyphicon glyphicon-remove line" aria-hidden="true" title="Eliminar" data-toggle="tooltip" data-placement="top" title="" data-original-title="Eliminar" ng-click="formCtrl.removeIndicador($index)"></i>
                     <!-- <div class="form-group col-md-1 col-sm-1">
                       <button type="button" class="btn btn-default btn-presupuesto" ng-click="formCtrl.removeIndicador($index)"><i class="glyphicon glyphicon-minus" aria-hidden="true"></i></button>
                     </div> -->
@@ -35,11 +35,11 @@
 
             
             <button type="submit" class="btn btn-success">Guardar Objetivo Estrat&eacute;gico</button>
-            <button class="btn btn-default btnRemove right" type="button" data-toggle="modal" data-target="#alertModalId" ng-click="formCtrl.deleteStrategicObjective(formCtrl.currentStrategicObjective.idObjetivoJurisdiccional)">
+            <button class="btn btn-default btnRemove right" type="button" data-toggle="modal" data-target="#strategicObjAlert">
                 Eliminar
             </button>
             <button type="button" class="btn btn-default right" ng-click="formCtrl.cancelStrategicObjective()">Cancelar cambios</button>
-
         </form>
+        <alertmodal modal-id="strategicObjAlert" modal-title="Aviso" modal-body="Se va a eliminar el Objetivo Estratégico. ¿Continuar?" on-accept="formCtrl.deleteStrategicObjectiveById(formCtrl.currentStrategicObjective.idObjetivoJurisdiccional)"></alertmodal>
     </div>
 </div>
