--- a/source/frontend/src/notification/notification.html
+++ b/source/frontend/src/notification/notification.html
@@ -1,10 +1,12 @@
 <!--success / warning / danger-->
-<div class="alert alert-{{notificationCtrl.type}} alert-block" id="alert">
+<div class="alert alert-{{type}} alert-block" id="alert">
     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
     <!--ok-sign / remove-sign / exclamation-sign-->
-    <i class="glyphicon glyphicon-{{notificationCtrl.icon}}" aria-hidden="true"></i>
-    <strong>{{notificationCtrl.title}} - </strong>{{notificationCtrl.text}}
-    <a style="cursor: pointer;" ng-if="notificationCtrl.gotoform" ng-click="notificationCtrl.goToCurrentForm()">{{notificationCtrl.textlink}}</a>
-    <a style="cursor: pointer;" ng-if="notificationCtrl.gotoestrategico" ng-click="notificationCtrl.goToCurrentEstrategico()">{{notificationCtrl.textlink}}</a>
-    <a style="cursor: pointer;" ng-if="notificationCtrl.gotooperativo" ng-click="notificationCtrl.goToCurrentOperativo()">{{notificationCtrl.textlink}}</a>
+    <i class="glyphicon glyphicon-{{icon}}" aria-hidden="true"></i>
+    <strong>{{title}} - </strong>{{text}}
+    <a style="cursor: pointer;" ng-if="gotoform" ng-click="notificationCtrl.goToCurrentForm()">{{textlink}}</a>
+    <a style="cursor: pointer;" ng-if="gotoestrategico" ng-click="notificationCtrl.goToCurrentEstrategico()">{{textlink}}</a>
+    <a style="cursor: pointer;" ng-if="gotooperativo" ng-click="notificationCtrl.goToCurrentOperativo()">{{textlink}}</a>
+    <br>
+    <a style="cursor: pointer;" ng-if="hascallback" ng-click="notificationCtrl.callback()">{{textlink}}</a>
 </div>
