--- a/source/frontend/src/users/form-user/form-user.html
+++ b/source/frontend/src/users/form-user/form-user.html
@@ -1,4 +1,4 @@
-<div class="contentNewProyect">Nuevo usuario</div>
+<div class="contentNewProyect">{{userFormCtrl.title}}</div>
 <div class="contentFormProyect admin">
   <div class="col-md-12 col-sm-12 col-xs-12">
     <form role="form" ng-submit="userFormCtrl.submit()">
@@ -6,15 +6,15 @@
         <div class="row">
           <div class="form-group col-md-4 col-sm-4 col-xs-12">
             <label for="name">Nombre</label>
-            <input type="text" class="form-control" id="name" ng-model="userFormCtrl.currentuser.nombre" placeholder="Ingresar nombre" required>
+            <input type="text" class="form-control" id="name" maxlength="512" ng-model="userFormCtrl.currentuser.nombre" placeholder="Ingresar nombre" required>
           </div>
           <div class="form-group col-md-4 col-sm-4 col-xs-12">
             <label for="name">Apellido</label>
-            <input type="text" class="form-control" id="name" ng-model="userFormCtrl.currentuser.apellido" placeholder="Ingresar apellido" required>
+            <input type="text" class="form-control" id="name" maxlength="512" ng-model="userFormCtrl.currentuser.apellido" placeholder="Ingresar apellido" required>
           </div>
           <div class="form-group col-md-4 col-sm-4 col-xs-12">
             <label for="name">Correo electrónico</label>
-            <input type="email" class="form-control" id="mail" ng-model="userFormCtrl.currentuser.email" placeholder="Ingresar mail" required>
+            <input type="email" class="form-control" id="mail" maxlength="512" ng-model="userFormCtrl.currentuser.email" placeholder="Ingresar mail" required>
           </div>
         </div>
         <div class="row">
