--- a/source/frontend/src/users/users.html
+++ b/source/frontend/src/users/users.html
@@ -45,13 +45,14 @@
                 <label for="cmn-toggle-{{user.idUsuario}}"></label>
               </div>
             </td>
-            <td class="colum-action"><i class="glyphicon glyphicon-edit" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="" data-original-title="Editar" ng-click="usersCtrl.editUser(user.idUsuario)"></i>
+            <td class="colum-action"><i class="glyphicon glyphicon-edit" aria-hidden="true" title="Editar" data-toggle="tooltip" data-placement="top" title="" data-original-title="Editar" ng-click="usersCtrl.editUser(user.idUsuario)"></i>
             </td>
-            <td class="colum-action"><i class="glyphicon glyphicon-remove line" aria-hidden="true" data-toggle="modal" data-target="#alertModalId" data-original-title="Eliminar" ng-click="usersCtrl.deleteUser(user.idUsuario)"></i>
+            <td class="colum-action"><i class="glyphicon glyphicon-remove line" title="Editar" aria-hidden="true" data-toggle="modal" data-target="#userAlert" data-original-title="Eliminar"></i>
             </td>
           </tr>
         </tbody>
       </table>
+      <alertmodal modal-id="userAlert" modal-title="Aviso" modal-body="Se va a eliminar el Usuario. ¿Continuar?" on-accept="usersCtrl.deleteUserById(user.idUsuario)"></alertmodal>
     </div>
   </div>
 </div>
